Fixed fireworks being too big

--- a/src/pages/GamePage/components/Fireworks.css
+++ b/src/pages/GamePage/components/Fireworks.css
@@ -1,3 +1,12 @@
+.fireworks-container {
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  top: 0;
+}
+
 .punt {
   position: absolute;
   left: 50px;
